--- a/main.css
+++ b/main.css
@@ -16,13 +16,19 @@ h1
 
 .jumpers
 {
+/*	
 	margin-left: auto;
 	margin-right: auto;
 	width: 1100px;
+*/
+	
 	text-align: center;
-	padding: 0;
+/*	padding: 0;
+*/
 }
 
+
+/*
 .jumper
 {
 	display: inline-block;
@@ -37,4 +43,19 @@ h1
 .jumper figure
 {
 	margin: 10px;
+}
+
+*/
+
+.jumpers img {
+	max-width: 100%;
+	height: auto;
+}
+
+.jumpers p {
+	margin-bottom: 30px;
+}
+
+.jumpers figcaption{
+	margin-top: 8px;
 }
